use Charset definition in URL encoding