@@ -10,6 +10,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import org.junit.Test;
 import org.opengis.filter.Filter;
@@ -27,7 +28,7 @@ public class Filter_1_0_0_KvpParserTest {
                         + "%2Fogc%3APropertyName%3E%3Cogc%3AAdd%3E%3Cogc%3ALiteral%3E4%3C%2Fogc%3A"
                         + "Literal%3E%3Cogc%3ALiteral%3E3%3C%2Fogc%3ALiteral%3E%3C%2Fogc%3AAdd%3E%3C"
                         + "%2Fogc%3APropertyIsEqualTo%3E%3C%2Fogc%3AFilter%3E";
-        filter = URLDecoder.decode(filter, "UTF-8");
+        filter = URLDecoder.decode(filter, StandardCharsets.UTF_8);
 
         List filters = (List) new Filter_1_0_0_KvpParser(null).parse(filter);
         assertNotNull(filters);
@@ -44,7 +45,7 @@ public class Filter_1_0_0_KvpParserTest {
                         + "%3CFeatureId%20fid=%22states.3%22/%3E%3C/Filter%3E)"
                         + "(%3CFilter%20xmlns=%22http://www.opengis.net/ogc%22%3E%3CFeatureId"
                         + "%20fid=%22tiger_roads.3%22/%3E%3C/Filter%3E)";
-        filter = URLDecoder.decode(filter, "UTF-8");
+        filter = URLDecoder.decode(filter, StandardCharsets.UTF_8);
 
         List filters = (List) new Filter_1_0_0_KvpParser(null).parse(filter);
         assertNotNull(filters);
@@ -66,7 +67,7 @@ public class Filter_1_0_0_KvpParserTest {
         String param =
                 "()(%3CFilter%20xmlns=%22http://www.opengis.net/ogc"
                         + "%22%3E%3CFeatureId%20fid=%22roads.3%22/%3E%3C/Filter%3E)";
-        param = URLDecoder.decode(param, "UTF-8");
+        param = URLDecoder.decode(param, StandardCharsets.UTF_8);
 
         List filters = (List) new Filter_1_0_0_KvpParser(null).parse(param);
         assertNotNull(filters);
